adding dateshift function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(clinical_staging)
 export(combine_storyboard_dfs)
 export(data.wrangle)
 export(date.shift.df)
+export(dateShift)
 export(demographics_df)
 export(diagnosis)
 export(filter_by_record)
